style: fix z-index and paddings/margins for allauth and policiesmodals

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -279,7 +279,7 @@ input[name='q']::placeholder {
     padding: 15px;
     box-shadow: 0 0 7px black;
     border: 1px solid #ffa500a1;
-    margin: 0 auto;
+    margin: -1vh auto 0;
     max-width: 650px;
 }
 
@@ -833,13 +833,13 @@ take up whole screen if many items */
     left: 0;
     position: fixed;
     background: rgba(0, 0, 0, 0.459);
-    z-index: 9000;
+    z-index: 900;
     backdrop-filter: blur(3px);
 }
 
 /* AND HIGH Z-INDEX FOR ELEMENT IN FOCUS. */
 .hi-z {
-    z-index: 10000;
+    z-index: 1000;
     position: relative;
 }
 
@@ -929,7 +929,7 @@ take up whole screen if many items */
 @media (min-width: 700px) and (max-height: 1400px),
     (max-width: 1024px) and (min-height: 1024px) {
     .allauth-form-inner-content {
-        margin: 25% auto;
+        margin: 12.5% auto;
         max-width: 600px;
     }
 }
